--- a/src/script/components/scrollbar.scss
+++ b/src/script/components/scrollbar.scss
@@ -2,53 +2,45 @@
 
 @import "style/style.scss";
 
+$scrollbar-size: 1em;
 
-div.scrollbar {
-    
-    min-width: 1.5em;
-    max-width: 1.5em;
+.scrollbar {
+    user-select: none;
+    * {  user-select: none; }
+
     border-radius: 0.25em;
-    height: 10em;
+    
+    .button, .button-icon {
+        width:  $scrollbar-size;
+        min-width:  $scrollbar-size;
+        max-width:  $scrollbar-size;
+        height: $scrollbar-size;
+        min-height: $scrollbar-size;
+        max-height: $scrollbar-size;
+        * { fill: var(--accent-3); stroke: var(--accent-3); }
+    }
 
     .scrollbar-inner {
         position: relative;
         display: flex;
-        flex-direction: column;
 
         width: 100%;
         height: 100%;
     
         box-sizing: border-box;
         background-color: var(--bg-input-0);
-    
-        > .button {
-            min-width: 1.5em;
-            max-width: 1.5em;
-            min-height: 1.5em;
-            max-height: 1.5em;
-
-            &:first-child {
-                margin-bottom: 0.75em;
-            }
-
-            &:last-child {
-                margin-top: 0.75em;
-            }
-        }
 
         > .scrollbar-slide {
             position: relative;
             height: 100%;
+            width:  100%;
             > .scrollbar-slider {
                 position: absolute;
-                top: var(--scrollbar-top);
-                max-height: 0;
                 display: flex;
                 align-items: center;
                 justify-content: center;
                 > .button {
-                    min-width: 1.5em;
-                    max-width: 1.5em;
+                    border-radius: 0;
                 }
             }
         }
@@ -56,6 +48,63 @@ div.scrollbar {
         .handle {
             box-sizing: border-box;
             @include button-theme;
+        }
+    }
+
+    &.vertical {
+        height: 100%;
+        min-width: $scrollbar-size;
+        max-width: $scrollbar-size;
+        .scrollbar-inner {
+            flex-direction: column;
+
+            > .button {
+                &:first-child {
+                    margin-bottom: $scrollbar-size/2;
+                    border-radius: 0.25em 0.25em 0 0;
+                }
+                &:last-child {
+                    margin-top: $scrollbar-size/2;
+                    border-radius: 0 0 0.25em 0.25em;
+                }
+            }
+
+            > .scrollbar-slide {
+                width: $scrollbar-size;
+                > .scrollbar-slider {
+                    top: var(--scrollbar-offset);
+                    max-height: 0;
+                }
+            }
+        }
+    }
+
+
+    &.horizontal {
+        width: 100%;
+        min-height: $scrollbar-size;
+        max-height: $scrollbar-size;
+        .scrollbar-inner {
+            flex-direction: row;
+
+            > .button {
+                &:first-child {
+                    margin-right: $scrollbar-size/2;
+                    border-radius: 0.25em 0 0 0.25em;
+                }
+                &:last-child {
+                    margin-left: $scrollbar-size/2;
+                    border-radius: 0 0.25em 0.25em 0;
+                }
+            }
+
+            > .scrollbar-slide {
+                height: $scrollbar-size;
+                > .scrollbar-slider {
+                    left: var(--scrollbar-offset);
+                    max-width: 0;
+                }
+            }
         }
     }
 }
