--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -56,3 +56,11 @@ body {
     background-color: var(--bg-panel-3);
     color:            var(--fg-panel-3 );
 }
+
+html, body {
+    width: 100&;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    border: 0;
+}
